Fixed bug - white space during scrolling

--- a/src/style.css
+++ b/src/style.css
@@ -275,6 +275,8 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
+    min-height: 65vh;
+    background-color: rgba(0,0,0,0.1);
     padding: 100px 50px;
     gap: 60px;
 }
